target/classes/META-INF/jkube/openshift/workshop-main-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/workshop-main
    jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
    app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_SERVICE_INIT.git
    jkube.io/git-commit: 441326e72df98927a8f5dcbe358be8b4caaf2e69
    app.openshift.io/vcs-ref: master
    jkube.io/git-branch: master
    prometheus.io/port: "9779"
    jkube.io/issue-system: GitHub
    prometheus.io/scrape: "true"
    jkube.io/git-url: https://github.com/likhia/INTERNAL_SERVICE_INIT.git
    jkube.io/scm-tag: 2.3.2.Beta1
  labels:
    expose: "true"
    app: workshop-main
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.workshop.main
  name: workshop-main
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: workshop-main
    provider: jkube
    group: com.workshop.main
